# qr-generator

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
qrgen/: main.py
