[metadata]
name = qrgen
version = 0.1.0
author = Alex Eze
description = A simple CLI tool to generate QR codes from URLs or text.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/yourusername/qrgen
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.7
install_requires =
    qrcode
    pillow

[options.entry_points]
console_scripts =
    qrgen = qrgen.qr:main
